--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "fs"]
 	path = fs
 	url = https://github.com/SujalChoudhari/fs
+[submodule "RabbitRSS"]
+	path = rabbit-rss
+	url = https://github.com/SujalChoudhari/RabbitRSS
